--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "063feb56dd0d4f47838034dfb5421679",
+       "model_id": "9b0ea20de9bf486799bd69a1627f02f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4336db0e3f544412884927be204e0a3a",
+       "model_id": "42bfdf52f970436abc34b3657a899deb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "261ae6bdf8894a9e83805f26bab6e6e5",
+       "model_id": "69c5e3fa8a34471a9e9877f622fe11b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12b0d529ab794dc29d6d6fe38ec65450",
+       "model_id": "9459fbe68e02478ead825f94d7cc3523",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8c3cba1da224c839e78fc2b8ca90a7a",
+       "model_id": "d62470b6ec3944498bd0e1563e73b88f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "027731f790d145a08e20b0844a183555",
+       "model_id": "d9c2169c9eaa4cf0ac7e0df12c6a76e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52e97baa94cf43c9a51880fa289719ad",
+       "model_id": "46f0f0cadc96465ca292f289a1b6160c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c29881f4ede4f63b25b75a2dea5b355",
+       "model_id": "3310b7c3f6814089beb9d9c094af477d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d328a9c1018e4e1e9070727dc0863058",
+       "model_id": "4f7f15a79f944ca9bcecbf7a2af49d27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +219,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e00f10cf28b4d74992fb684dc9b2150",
+       "model_id": "7bd355cec2584b9c8936370858e03037",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6903468e78ab4bc384aa42e78addd046",
+       "model_id": "bd983a997dab48708147ed8aa9955fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00b0c5dd29f44573b777c61f1bbd8110",
+       "model_id": "1e670c668a454a8fb3bb315a092aad80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "257abf23cdbc422d873385da4a9e96c1",
+       "model_id": "307fdfddc6b14a04a15384e2332de7e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf54da8170ab417480d2f968b058f36d",
+       "model_id": "415cd57038de4606bb8fa91fe1b25684",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +289,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81084ecf870540f2b5a0c20c35610fc1",
+       "model_id": "73e6bb5448c8468e84bb891fab662c25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ed2939c3c6a49aa91f4036b95193092",
+       "model_id": "6f3b00dea25444b2b7b3ef11493db9e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,19 +356,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 8*19+8*18 + 8*1\n",
-    "kolejki = 37 + 1\n",
-    "avg_strzelone_dom_liga = (449+13)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (318+9)/mecze_liga"
+    "mecze_liga = 8*19+8*18 #+ 8*1\n",
+    "kolejki = 37 #+ 1\n",
+    "avg_strzelone_dom_liga = (449)/mecze_liga #+13\n",
+    "avg_strzelone_wyjazd_liga = (318)/mecze_liga #+9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,6 +470,21 @@
     "        display_matchday(kolejka.value)\n",
     "    \n",
     "button.on_click(on_confirm_button_clicked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#home = home_attack_strength[\"Warta\"]*away_defence_strength[\"Lechia\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Warta\"]*away_attack_strength[\"Lechia\"]*avg_strzelone_wyjazd_liga\n",
+    "#results = []\n",
+    "#rng = np.random.default_rng()\n",
+    "#for i in range(0,int(n.value)):\n",
+    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "#Counter(results).most_common(25)"
    ]
   },
   {
@@ -496,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
