--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,26 +66,18 @@
     "\n",
     "style = {'description_width': 'initial'}\n",
     "\n",
-    "pbb_strzelone_dom = widgets.FloatSlider(value=1.10, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych u siebie bramek przez Podbeskidzie',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "stal_strzelone_dom = widgets.FloatSlider(value=0.85, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych u siebie bramek przez Stal',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "warta_strzelone_dom = widgets.FloatSlider(value=0.7, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych u siebie bramek przez Wartę',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
+    "ben_strzelone_dom = widgets.FloatSlider(value=0.85, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych u siebie bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
     "\n",
-    "pbb_strzelone_wyjazd = widgets.FloatSlider(value=0.90, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych na wyjeździe bramek przez Podbeskidzie',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "stal_strzelone_wyjazd = widgets.FloatSlider(value=0.90, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych na wyjeździe bramek przez Stal',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "warta_strzelone_wyjazd = widgets.FloatSlider(value=0.90, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych na wyjeździe bramek przez Wartę',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
+    "ben_strzelone_wyjazd = widgets.FloatSlider(value=0.90, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych na wyjeździe bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
     "\n",
-    "pbb_stracone_dom = widgets.FloatSlider(value=2.8, min=0.5, max=3.5,step=0.05, description='Mnożnik straconych u siebie bramek przez Podbeskidzie',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "stal_stracone_dom = widgets.FloatSlider(value=2.8, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych u siebie bramek przez Stal',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "warta_stracone_dom = widgets.FloatSlider(value=2.8, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych u siebie bramek przez Wartę',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
+    "ben_stracone_dom = widgets.FloatSlider(value=2.8, min=0.5, max=3.5,step=0.05, description='Mnożnik straconych u siebie bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
     "\n",
-    "pbb_stracone_wyjazd = widgets.FloatSlider(value=2.15, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych na wyjeździe bramek przez Podbeskidzie',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "stal_stracone_wyjazd = widgets.FloatSlider(value=2.15, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych na wyjeździe bramek przez Stal',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "warta_stracone_wyjazd = widgets.FloatSlider(value=2.15, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych na wyjeździe bramek przez Wartę',disabled=False, style=style, layout=Layout(min_width='50%'))"
+    "ben_stracone_wyjazd = widgets.FloatSlider(value=2.15, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych na wyjeździe bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -93,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b0ea20de9bf486799bd69a1627f02f9",
+       "model_id": "91f60d0a62cd4a459a1481f6e24c8f78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42bfdf52f970436abc34b3657a899deb",
+       "model_id": "eb190311d9bd4f39812ed2c1f66ed927",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,12 +113,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69c5e3fa8a34471a9e9877f622fe11b0",
+       "model_id": "bebc861c68b148c697fa0a6fbfb0ce26",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=1.1, description='Mnożnik strzelonych u siebie bramek przez Podbeskidzie', layout=Layout(min…"
+       "FloatSlider(value=0.85, description='Mnożnik strzelonych u siebie bramek przez beniaminków', layout=Layout(min…"
       ]
      },
      "metadata": {},
@@ -135,12 +127,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9459fbe68e02478ead825f94d7cc3523",
+       "model_id": "39482f1938024b34898db0d088d833c4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=0.85, description='Mnożnik strzelonych u siebie bramek przez Stal', layout=Layout(min_width=…"
+       "FloatSlider(value=0.9, description='Mnożnik strzelonych na wyjeździe bramek przez beniaminków', layout=Layout(…"
       ]
      },
      "metadata": {},
@@ -149,12 +141,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d62470b6ec3944498bd0e1563e73b88f",
+       "model_id": "7c77fab2b0dd4c82ae9dbc96618722b9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=0.7, description='Mnożnik strzelonych u siebie bramek przez Wartę', layout=Layout(min_width=…"
+       "FloatSlider(value=2.8, description='Mnożnik straconych u siebie bramek przez beniaminków', layout=Layout(min_w…"
       ]
      },
      "metadata": {},
@@ -163,12 +155,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9c2169c9eaa4cf0ac7e0df12c6a76e4",
+       "model_id": "462e411752d04034ac3694caca1744af",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=0.9, description='Mnożnik strzelonych na wyjeździe bramek przez Podbeskidzie', layout=Layout…"
+       "FloatSlider(value=2.15, description='Mnożnik straconych na wyjeździe bramek przez beniaminków', layout=Layout(…"
       ]
      },
      "metadata": {},
@@ -177,119 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46f0f0cadc96465ca292f289a1b6160c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.9, description='Mnożnik strzelonych na wyjeździe bramek przez Stal', layout=Layout(min_wid…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3310b7c3f6814089beb9d9c094af477d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.9, description='Mnożnik strzelonych na wyjeździe bramek przez Wartę', layout=Layout(min_wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f7f15a79f944ca9bcecbf7a2af49d27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=2.8, description='Mnożnik straconych u siebie bramek przez Podbeskidzie', layout=Layout(min_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bd355cec2584b9c8936370858e03037",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=2.8, description='Mnożnik straconych u siebie bramek przez Stal', layout=Layout(min_width='5…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd983a997dab48708147ed8aa9955fb9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=2.8, description='Mnożnik straconych u siebie bramek przez Wartę', layout=Layout(min_width='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e670c668a454a8fb3bb315a092aad80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=2.15, description='Mnożnik straconych na wyjeździe bramek przez Podbeskidzie', layout=Layout…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "307fdfddc6b14a04a15384e2332de7e9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=2.15, description='Mnożnik straconych na wyjeździe bramek przez Stal', layout=Layout(min_wid…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "415cd57038de4606bb8fa91fe1b25684",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=2.15, description='Mnożnik straconych na wyjeździe bramek przez Wartę', layout=Layout(min_wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73e6bb5448c8468e84bb891fab662c25",
+       "model_id": "0287aa21726c49aca2a534bfe569504d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f3b00dea25444b2b7b3ef11493db9e4",
+       "model_id": "b432445c3c9845b2a0ff396c94872c31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,18 +202,10 @@
     "display(n)\n",
     "display(kolejka)\n",
     "\n",
-    "display(pbb_strzelone_dom)\n",
-    "display(stal_strzelone_dom)\n",
-    "display(warta_strzelone_dom)\n",
-    "display(pbb_strzelone_wyjazd)\n",
-    "display(stal_strzelone_wyjazd)\n",
-    "display(warta_strzelone_wyjazd)\n",
-    "display(pbb_stracone_dom)\n",
-    "display(stal_stracone_dom)\n",
-    "display(warta_stracone_dom)\n",
-    "display(pbb_stracone_wyjazd)\n",
-    "display(stal_stracone_wyjazd)\n",
-    "display(warta_stracone_wyjazd)\n",
+    "display(ben_strzelone_dom)\n",
+    "display(ben_strzelone_wyjazd)\n",
+    "display(ben_stracone_dom)\n",
+    "display(ben_stracone_wyjazd)\n",
     "\n",
     "button = widgets.Button(description='Zatwierdź',disabled=False,tooltip='Confirm',icon='check') \n",
     "output = widgets.Output()\n",
@@ -356,19 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 8*19+8*18 #+ 8*1\n",
-    "kolejki = 37 #+ 1\n",
-    "avg_strzelone_dom_liga = (449)/mecze_liga #+13\n",
-    "avg_strzelone_wyjazd_liga = (318)/mecze_liga #+9"
+    "mecze_liga = 8*19+8*18 + 8*2\n",
+    "kolejki = 37 + 2\n",
+    "avg_strzelone_dom_liga = (449+13+8)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (318+9+15)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,20 +262,20 @@
     "        avg_strzelone_wyjazd[x.strip().split(\",\")[0]]= int(x.strip().split(\",\")[3])/int(x.strip().split(\",\")[6])\n",
     "        avg_stracone_wyjazd[x.strip().split(\",\")[0]] = int(x.strip().split(\",\")[4])/int(x.strip().split(\",\")[6])\n",
     "        \n",
-    "    avg_strzelone_dom['Stal'] = avg_strzelone_dom['Stal']*stal_strzelone_dom.value\n",
-    "    avg_stracone_dom['Stal'] = avg_stracone_dom['Stal']*stal_stracone_dom.value\n",
-    "    avg_strzelone_wyjazd['Stal'] = avg_strzelone_wyjazd['Stal']*stal_strzelone_wyjazd.value\n",
-    "    avg_stracone_wyjazd['Stal'] = avg_stracone_wyjazd['Stal']*stal_stracone_wyjazd.value\n",
+    "    avg_strzelone_dom['Stal'] = avg_strzelone_dom['Stal']*ben_strzelone_dom.value\n",
+    "    avg_stracone_dom['Stal'] = avg_stracone_dom['Stal']*ben_stracone_dom.value\n",
+    "    avg_strzelone_wyjazd['Stal'] = avg_strzelone_wyjazd['Stal']*ben_strzelone_wyjazd.value\n",
+    "    avg_stracone_wyjazd['Stal'] = avg_stracone_wyjazd['Stal']*ben_stracone_wyjazd.value\n",
     "    \n",
-    "    avg_strzelone_dom['Warta'] = avg_strzelone_dom['Warta']*warta_strzelone_dom.value\n",
-    "    avg_stracone_dom['Warta'] = avg_stracone_dom['Warta']*warta_stracone_dom.value\n",
-    "    avg_strzelone_wyjazd['Warta'] = avg_strzelone_wyjazd['Warta']*warta_strzelone_wyjazd.value\n",
-    "    avg_stracone_wyjazd['Warta'] = avg_stracone_wyjazd['Warta']*warta_stracone_wyjazd.value\n",
+    "    avg_strzelone_dom['Warta'] = avg_strzelone_dom['Warta']*ben_strzelone_dom.value\n",
+    "    avg_stracone_dom['Warta'] = avg_stracone_dom['Warta']*ben_stracone_dom.value\n",
+    "    avg_strzelone_wyjazd['Warta'] = avg_strzelone_wyjazd['Warta']*ben_strzelone_wyjazd.value\n",
+    "    avg_stracone_wyjazd['Warta'] = avg_stracone_wyjazd['Warta']*ben_stracone_wyjazd.value\n",
     "    \n",
-    "    avg_strzelone_dom['Podbeskidzie'] = avg_strzelone_dom['Podbeskidzie']*pbb_strzelone_dom.value\n",
-    "    avg_stracone_dom['Podbeskidzie'] = avg_stracone_dom['Podbeskidzie']*pbb_stracone_dom.value\n",
-    "    avg_strzelone_wyjazd['Podbeskidzie'] = avg_strzelone_wyjazd['Podbeskidzie']*pbb_strzelone_wyjazd.value\n",
-    "    avg_stracone_wyjazd['Podbeskidzie'] = avg_stracone_wyjazd['Podbeskidzie']*pbb_stracone_wyjazd.value\n",
+    "    avg_strzelone_dom['Podbeskidzie'] = avg_strzelone_dom['Podbeskidzie']*ben_strzelone_dom.value\n",
+    "    avg_stracone_dom['Podbeskidzie'] = avg_stracone_dom['Podbeskidzie']*ben_stracone_dom.value\n",
+    "    avg_strzelone_wyjazd['Podbeskidzie'] = avg_strzelone_wyjazd['Podbeskidzie']*ben_strzelone_wyjazd.value\n",
+    "    avg_stracone_wyjazd['Podbeskidzie'] = avg_stracone_wyjazd['Podbeskidzie']*ben_stracone_wyjazd.value\n",
     "\n",
     "    global home_attack_strength\n",
     "    home_attack_strength = {}\n",
@@ -429,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,8 +313,8 @@
     "    clear_output()\n",
     "    h = open(\"Kolejki Ekstraklasa/\"+str(a), \"r\", encoding='utf-8')\n",
     "    for x in h:\n",
-    "        home_team = x.strip().split(\"-\")[0]\n",
-    "        away_team = x.strip().split(\"-\")[1]\n",
+    "        home_team = x.strip().split(\",\")[0].split(\"-\")[0]\n",
+    "        away_team = x.strip().split(\",\")[0].split(\"-\")[1]\n",
     "        rng = np.random.default_rng()\n",
     "        results = []\n",
     "        home = home_attack_strength[home_team]*away_defence_strength[away_team]*avg_strzelone_dom_liga\n",
@@ -460,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,12 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Warta\"]*away_defence_strength[\"Lechia\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Warta\"]*away_attack_strength[\"Lechia\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Wisła\"]*away_defence_strength[\"Śląsk\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Wisła\"]*away_attack_strength[\"Śląsk\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
