--- a/Poisson1Liga.ipynb
+++ b/Poisson1Liga.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -89,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8de4fabb3ecf46c69f51e663399406bd",
+       "model_id": "a9bd42cf4b604332b2a1fa572df6d603",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c8e3b4e344a492b8ad6a86053978bb6",
+       "model_id": "1634f431f4a74611b7db528a6cec1d37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3c95359b6e0493a8b4a22f6aea503d8",
+       "model_id": "b76a9829b4f2406caab4baab5c1f4f4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f12ed205b9ab4f73a92dbcb80f16d19a",
+       "model_id": "eb16f9b456884ea9b53d947d22cbba32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9439c4fbe4b84c78a70d035b3e587be5",
+       "model_id": "ec8340c9f8e34b848ecbe447896910e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c4d274210684cadbd068eb8f74193d4",
+       "model_id": "77eeeebc45dd41138b1f9954ffe33b31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2ed9605eeaf4f0485fad1f6a67fac47",
+       "model_id": "556221eb79084aeda418a49d0cf5400e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "840d74ebd5574c35888ca2ddf45b1f55",
+       "model_id": "c2f2e80e83004373a12d20f4ae76f794",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "099d080cd9ad44deaa76056ed7d76b1d",
+       "model_id": "a7715c24cb20496fae25f5ba54448383",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef993b7fa72f4f0d921d563ab26cdbd0",
+       "model_id": "64fbad833b9343158c785b6d868f124e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b12f1d076884eb297b46f7b81ef68dc",
+       "model_id": "17eb0337a4b1477daac7b3d0e82100ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69d5a0ebc1f44bdabd722f0e4e10b003",
+       "model_id": "6d1b505b652a48118d7d47b3aae788dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,19 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 9*17+9*17 + 9*1 + 6\n",
-    "kolejki = 34 + 2\n",
-    "avg_strzelone_dom_liga = (444+12+12)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (366+14+5)/mecze_liga"
+    "mecze_liga = 9*17+9*17 + 9*3\n",
+    "kolejki = 34 + 3\n",
+    "avg_strzelone_dom_liga = (444+12+13+15)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (366+14+10+1)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,17 +426,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((1, 0), 1415),\n",
+       " ((2, 0), 1190),\n",
+       " ((1, 1), 1188),\n",
+       " ((2, 1), 930),\n",
+       " ((0, 0), 875),\n",
+       " ((0, 1), 700),\n",
+       " ((3, 0), 666),\n",
+       " ((3, 1), 499),\n",
+       " ((1, 2), 434),\n",
+       " ((2, 2), 348),\n",
+       " ((4, 0), 274),\n",
+       " ((0, 2), 242),\n",
+       " ((3, 2), 203),\n",
+       " ((4, 1), 187),\n",
+       " ((1, 3), 150),\n",
+       " ((4, 2), 101),\n",
+       " ((2, 3), 99),\n",
+       " ((5, 0), 92),\n",
+       " ((5, 1), 74),\n",
+       " ((0, 3), 73),\n",
+       " ((3, 3), 52),\n",
+       " ((5, 2), 32),\n",
+       " ((6, 0), 31),\n",
+       " ((2, 4), 22),\n",
+       " ((1, 4), 20),\n",
+       " ((6, 1), 19),\n",
+       " ((4, 3), 16),\n",
+       " ((7, 0), 10),\n",
+       " ((3, 4), 9),\n",
+       " ((6, 2), 8),\n",
+       " ((0, 4), 7),\n",
+       " ((1, 5), 5),\n",
+       " ((5, 3), 4),\n",
+       " ((8, 0), 3),\n",
+       " ((2, 5), 3)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#home = home_attack_strength[\"Łęczna\"]*away_defence_strength[\"Resovia\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Łęczna\"]*away_attack_strength[\"Resovia\"]*avg_strzelone_wyjazd_liga\n",
-    "#results = []\n",
-    "#rng = np.random.default_rng()\n",
-    "#for i in range(0,int(n.value)):\n",
-    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(35)"
+    "home = home_attack_strength[\"Chrobry\"]*away_defence_strength[\"Radomiak\"]*avg_strzelone_dom_liga\n",
+    "away = home_defence_strength[\"Chrobry\"]*away_attack_strength[\"Radomiak\"]*avg_strzelone_wyjazd_liga\n",
+    "results = []\n",
+    "rng = np.random.default_rng()\n",
+    "for i in range(0,int(n.value)):\n",
+    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "Counter(results).most_common(35)"
    ]
   },
   {
@@ -463,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
