--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -85,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8e2c1e8cd7a44d89b6da04c4dd1bd24",
+       "model_id": "0f4a4d0bb0d84065abcde06a657b87dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1038025a2a40424ca344f6324936d4dc",
+       "model_id": "19e3a4ff72b9428e9ab4dd859206652e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48c58a24e1494a5f988c0fad705d25e3",
+       "model_id": "70b13935ae534c7a938800c44b3cac4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cbcc814567648c4a1f34187e6b91ced",
+       "model_id": "9a31d5192e5f4f07a830605b85b9c469",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6004765e1e64dce81176ff1cabbe047",
+       "model_id": "0661ed47e6e34e079747228c2998b8a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4cd093287574b90ac2fadd199de638f",
+       "model_id": "672b3876723a460281c22c25c6969dbe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bc2d4b089ca4abeba464b7c9db668cf",
+       "model_id": "bbb1282c869a4a6c8748587efd446af2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b722836821744f59a4ab263d3cd7779a",
+       "model_id": "9fca977956304d41abae88e4895da409",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,10 +232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 8*19+8*18 + 8*2\n",
-    "kolejki = 37 + 2\n",
-    "avg_strzelone_dom_liga = (449+13+8)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (318+9+15)/mecze_liga"
+    "mecze_liga = 8*19+8*18 + 8*3\n",
+    "kolejki = 37 + 3\n",
+    "avg_strzelone_dom_liga = (449+13+8+13)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (318+9+15+10)/mecze_liga"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
