--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -56,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aby uruchomić, wciśnij spację"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -85,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f4a4d0bb0d84065abcde06a657b87dd",
+       "model_id": "aa667c4bc9d840cf9db9a9d2acbfe747",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19e3a4ff72b9428e9ab4dd859206652e",
+       "model_id": "a6db5133e7fd4507bd9506e847fb5e51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70b13935ae534c7a938800c44b3cac4a",
+       "model_id": "2fcca8de10f644ea8798ce6a39366bb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a31d5192e5f4f07a830605b85b9c469",
+       "model_id": "ebb2e361f79a44d1afc8f4d5ca063ffd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0661ed47e6e34e079747228c2998b8a0",
+       "model_id": "871aa05c170b4bed920996952c50d09e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "672b3876723a460281c22c25c6969dbe",
+       "model_id": "200face13ef449e0957d76e8160a3ddf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbb1282c869a4a6c8748587efd446af2",
+       "model_id": "b88fb699b3594829beb2fb49680433ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fca977956304d41abae88e4895da409",
+       "model_id": "cfa2764d43394d9e8435106ac886a202",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,28 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Aby uruchomić, wciśnij spację"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 8*19+8*18 + 8*3\n",
-    "kolejki = 37 + 3\n",
-    "avg_strzelone_dom_liga = (449+13+8+13)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (318+9+15+10)/mecze_liga"
+    "mecze_liga = 8*19+8*18 + 8*4\n",
+    "kolejki = 37 + 4\n",
+    "avg_strzelone_dom_liga = (449+13+8+13+9)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (318+9+15+10+14)/mecze_liga"
    ]
   },
   {
@@ -350,8 +343,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Warta\"]*away_defence_strength[\"Piast\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Warta\"]*away_attack_strength[\"Piast\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Wisła\"]*away_defence_strength[\"Płock\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Wisła\"]*away_attack_strength[\"Płock\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
@@ -383,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
