--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "954e7abeff1548fda764a6716930163b",
+       "model_id": "5d77d74bec7a473fa9feb834de50bc03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d102c474fb1461ca6d826a6525de003",
+       "model_id": "36a817c9067b415cbf3ba2bbd2aed41d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91e7806d6dd4451d886fabdda9c62ef6",
+       "model_id": "bf800117fd0b4b33a9b954ffdb53cb31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "830f26d798194e099d1eb657cf7b4cee",
+       "model_id": "9e9be029baa84285ab541b159b3dc3eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,18 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 4*8 + 6\n",
-    "avg_strzelone_dom_liga = (13+8+13+9+10)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (9+15+10+14+8)/mecze_liga"
+    "mecze_liga = 4*8 + 6 + 5\n",
+    "avg_strzelone_dom_liga = (13+8+13+9+10+10)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (9+15+10+14+8+5)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Płock\"]*away_defence_strength[\"Warta\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Płock\"]*away_attack_strength[\"Warta\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Zagłębie\"]*away_defence_strength[\"Górnik\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Zagłębie\"]*away_attack_strength[\"Górnik\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
     "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(25)"
+    "#Counter(results).most_common(35)"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
