--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d77d74bec7a473fa9feb834de50bc03",
+       "model_id": "4c0112d3f0124ee4bf158c0e2a8202e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36a817c9067b415cbf3ba2bbd2aed41d",
+       "model_id": "7c86f356750543d5aa5072dc0189e593",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf800117fd0b4b33a9b954ffdb53cb31",
+       "model_id": "1d41f1e8bd5c4001862fbb607accba31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e9be029baa84285ab541b159b3dc3eb",
+       "model_id": "26dad14499f84718a15c17faa5048812",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,18 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 4*8 + 6 + 5\n",
-    "avg_strzelone_dom_liga = (13+8+13+9+10+10)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (9+15+10+14+8+5)/mecze_liga"
+    "mecze_liga = 5*8 + 6 + 5\n",
+    "avg_strzelone_dom_liga = (13+8+13+9+10+10+8)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (9+15+10+14+8+5+14)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,18 +294,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Zagłębie\"]*away_defence_strength[\"Górnik\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Zagłębie\"]*away_attack_strength[\"Górnik\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Stal\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Stal\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
     "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
     "#Counter(results).most_common(35)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -331,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
