--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c0112d3f0124ee4bf158c0e2a8202e8",
+       "model_id": "ff7a889792d9468ba67f9a65533eae06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c86f356750543d5aa5072dc0189e593",
+       "model_id": "6a0b679d23c046eba012d3d0016b8de6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d41f1e8bd5c4001862fbb607accba31",
+       "model_id": "bd82e537c9774762b5598fa42c7a9125",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26dad14499f84718a15c17faa5048812",
+       "model_id": "2919c1b5ab0443fc8230f52bc1756a73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,17 +294,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 2), 1780),\n",
+       " ((0, 1), 1566),\n",
+       " ((0, 3), 1369),\n",
+       " ((0, 4), 782),\n",
+       " ((0, 0), 706),\n",
+       " ((1, 2), 671),\n",
+       " ((1, 1), 659),\n",
+       " ((1, 3), 549),\n",
+       " ((0, 5), 353),\n",
+       " ((1, 4), 338),\n",
+       " ((1, 0), 262),\n",
+       " ((2, 2), 154),\n",
+       " ((1, 5), 122),\n",
+       " ((0, 6), 121),\n",
+       " ((2, 1), 113),\n",
+       " ((2, 3), 104),\n",
+       " ((1, 6), 65),\n",
+       " ((2, 4), 60),\n",
+       " ((2, 0), 51),\n",
+       " ((0, 7), 38),\n",
+       " ((2, 5), 28),\n",
+       " ((3, 3), 15),\n",
+       " ((0, 8), 15),\n",
+       " ((3, 2), 13),\n",
+       " ((1, 7), 12),\n",
+       " ((2, 6), 10),\n",
+       " ((3, 5), 7),\n",
+       " ((3, 1), 6),\n",
+       " ((3, 4), 5),\n",
+       " ((3, 0), 5),\n",
+       " ((2, 7), 5),\n",
+       " ((1, 8), 4),\n",
+       " ((1, 9), 3),\n",
+       " ((0, 9), 3),\n",
+       " ((4, 1), 2)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#home = home_attack_strength[\"Stal\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Stal\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
-    "#results = []\n",
-    "#rng = np.random.default_rng()\n",
-    "#for i in range(0,int(n.value)):\n",
-    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(35)"
+    "home = home_attack_strength[\"Piast\"]*away_defence_strength[\"Płock\"]*avg_strzelone_dom_liga\n",
+    "away = home_defence_strength[\"Piast\"]*away_attack_strength[\"Płock\"]*avg_strzelone_wyjazd_liga\n",
+    "results = []\n",
+    "rng = np.random.default_rng()\n",
+    "for i in range(0,int(n.value)):\n",
+    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "Counter(results).most_common(35)"
    ]
   },
   {
@@ -338,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
